--- a/views/success.ejs
+++ b/views/success.ejs
@@ -5,11 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Success</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=JKf7eUQL3StL&format=png&color=000000"
+        type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-green-50 min-h-screen flex items-center justify-center px-4">
-    <div class="max-w-md w-full bg-white p-8 rounded-lg shadow-lg text-center">
+<body class="bg-green-200 min-h-screen flex items-center justify-center px-4">
+    <div class="max-w-md w-full bg-white p-8 rounded-lg shadow-xl text-center">
         <div class="flex justify-center mb-6">
             <svg class="w-16 h-16 text-green-500" fill="none" stroke="currentColor" stroke-width="2"
                 viewBox="0 0 24 24">
