--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,31 +12,36 @@
 </head>
 
 <body class="bg-gray-400 flex flex-col items-center justify-start min-h-screen p-8 space-y-8">
-
-    <form id="formInputs" class="w-full max-w-4xl bg-gray-200 p-8 rounded-lg shadow-md" method="post"
-        autocomplete="off">
+    <!-- <form action="<%= result._id %>" id="formInputs" class="w-full max-w-4xl bg-gray-200 p-8 rounded-lg shadow-md" -->
+    <!-- <form action="<%= curdStatus === 'insert' ? '/insertRecords' : '/home/'+ personResult._id %>" id="formInputs" -->
+    <form
+        action="<%= curdStatus === 'insert' ? '/insertRecords' : (result && result._id ? '/update/' + result._id : '') %>"
+        id="formInputs" class="w-full max-w-4xl bg-gray-200 p-8 rounded-lg shadow-md" method="post" autocomplete="off">
         <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">User Information</h2>
 
         <div class="mb-4">
             <label for="firstname" class="block text-gray-700 font-medium mb-2">First Name</label>
             <input type="text" id="firstname" name="firstname" placeholder="Enter your first name"
-                class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none" required>
+                class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none"
+                value="<%= personResult != '' ? personResult.firstname : '' %>" required>
         </div>
 
         <div class="mb-4">
             <label for="lastname" class="block text-gray-700 font-medium mb-2">Last Name</label>
             <input type="text" id="lastname" name="lastname" placeholder="Enter your last name"
-                class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none" required>
+                class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none"
+                value="<%= personResult != '' ? personResult.lastname : '' %>" required>
         </div>
 
         <div class="mb-6">
             <label for="city" class="block text-gray-700 font-medium mb-2">City</label>
             <input type="text" id="city" name="city" placeholder="Enter your city"
-                class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none" required>
+                class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none"
+                value="<%= personResult != '' ? personResult.city : '' %>" required>
         </div>
 
         <div class="mt-6 flex items-center gap-4">
-            <button id="sendData" type="submit"
+            <button id="sendData" type="submit" onclick=`input.value="" `
                 class="flex-1 bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition duration-200">
                 Submit
             </button>
